refactor: add discovery service and it configuration

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
 	<modules>
 		<module>waste-microservice</module>
 		<module>cloud-config</module>
+		<module>api-gateway</module>
+		<module>discovery-service</module>
 
 	</modules>
 
