--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,11 +1,6 @@
 spring.application.name=api-gateway
-server.port=9090
-# Waste service route
-spring.cloud.gateway.mvc.routes[0].id=waste-service
-spring.cloud.gateway.mvc.routes[0].uri=http://localhost:8080
-spring.cloud.gateway.mvc.routes[0].predicates[0]=Path=/api/v1/wastemanager/**
+spring.config.import=optional:configserver:http://localhost:6060/
 
-#Log
-logging.level.root=info
-logging.level.org.springframework.cloud.gateway=trace
-logging.level.org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator=info
+
+
+
