--- a/cloud-config/pom.xml
+++ b/cloud-config/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>test.dev</groupId>
+		<groupId>tes.dev</groupId>
 		<artifactId>microservices</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
