add eureka client config

--- a/config-data/api-gateway.properties
+++ b/config-data/api-gateway.properties
@@ -1,5 +1,12 @@
 spring.application.name=api-gateway
 server.port=9090
+
+#Eureka client
+eureka.client.service-url.default-zone=http://localhost:7071/eureka
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+
+
 # Waste service route
 spring.cloud.gateway.mvc.routes[0].id=waste-service
 spring.cloud.gateway.mvc.routes[0].uri=http://localhost:8080
@@ -9,3 +16,4 @@ spring.cloud.gateway.mvc.routes[0].predicates[0]=Path=/api/v1/wastemanager/**
 logging.level.root=info
 logging.level.org.springframework.cloud.gateway=trace
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator=info
+
