--- a/config-data/waste-manager.properties
+++ b/config-data/waste-manager.properties
@@ -15,6 +15,10 @@ spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
 
+#Eureka client
+eureka.client.service-url.default-zone=http://localhost:7071/eureka
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
 
 
 
