--- a/config-data/api-gateway.properties
+++ b/config-data/api-gateway.properties
@@ -1,8 +1,8 @@
-spring.application.name=api-gateway
+spring.application.name=api-gateway-service
 server.port=9090
 
 #Eureka client
-eureka.client.service-url.default-zone=http://localhost:7071/eureka
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 
