--- a/config-data/waste-manager.properties
+++ b/config-data/waste-manager.properties
@@ -1,4 +1,4 @@
-spring.application.name=waste
+spring.application.name=waste-manager-service
 server.port=8080
 spring.datasource.url=jdbc:h2:mem:waste-db;DB_CLOSE_ON_EXIT=TRUE
 spring.datasource.driverClassName=org.h2.Driver
@@ -16,7 +16,7 @@ spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
 
 #Eureka client
-eureka.client.service-url.default-zone=http://localhost:7071/eureka
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 
