--- a/discovery-service/src/main/resources/application.properties
+++ b/discovery-service/src/main/resources/application.properties
@@ -1,14 +1,6 @@
-spring.application.name=discovery-service
-server.port=7071
-eureka.instance.hostname=localhost
-eureka.instance.prefer-ip-address=false
+spring.application.name=eureka-service
+spring.config.import=optional:configserver:http://localhost:6060/
 
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
-eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
-
-logging.level.org.springframework.web=debug
-logging.level.org.springframework.security=debug
 
 
 
