--- a/config-data/api-gateway.properties
+++ b/config-data/api-gateway.properties
@@ -9,7 +9,7 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 
 # Waste service route
 spring.cloud.gateway.mvc.routes[0].id=waste-service
-spring.cloud.gateway.mvc.routes[0].uri=http://localhost:8080
+spring.cloud.gateway.mvc.routes[0].uri=lb://localhost:8080
 spring.cloud.gateway.mvc.routes[0].predicates[0]=Path=/api/v1/wastemanager/**
 
 #Log
