refactor: change the service name.

--- a/config-data/api-gateway.properties
+++ b/config-data/api-gateway.properties
@@ -8,8 +8,8 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 
 
 # Waste service route
-spring.cloud.gateway.mvc.routes[0].id=waste-service
-spring.cloud.gateway.mvc.routes[0].uri=lb://waste-service
+spring.cloud.gateway.mvc.routes[0].id=waste-manager-service
+spring.cloud.gateway.mvc.routes[0].uri=lb://waste-manager-service
 spring.cloud.gateway.mvc.routes[0].predicates[0]=Path=/api/v1/wastemanager/**
 
 #Log
