--- a/config-data/api_gateway-dev.properties
+++ b/config-data/api_gateway-dev.properties
@@ -1,6 +1,5 @@
 spring.application.name=api-gateway-service
 server.port=9090
-
 #Eureka client
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
@@ -8,8 +7,8 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 
 
 # Waste service route
-spring.cloud.gateway.mvc.routes[0].id=waste-manager-service
-spring.cloud.gateway.mvc.routes[0].uri=lb://waste-manager-service
+spring.cloud.gateway.mvc.routes[0].id=waste_manager-service
+spring.cloud.gateway.mvc.routes[0].uri=lb://waste_manager-service
 spring.cloud.gateway.mvc.routes[0].predicates[0]=Path=/api/v1/wastemanager/**
 
 #Log
