--- a/discovery-service/src/main/resources/application.properties
+++ b/discovery-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.application.name=eureka-service
+spring.application.name=eureka_service
+spring.profiles.active=dev
 spring.config.import=optional:configserver:http://localhost:6060/
 
 
