--- a/config-data/api_gateway-dev.properties
+++ b/config-data/api_gateway-dev.properties
@@ -7,9 +7,9 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 
 
 # Waste service route
-spring.cloud.gateway.mvc.routes[0].id=waste-manager-service
-spring.cloud.gateway.mvc.routes[0].uri=lb://waste-manager-service
-spring.cloud.gateway.mvc.routes[0].predicates[0]=Path=/api/v1/wastemanager/**
+spring.cloud.gateway.routes[0].id=waste-manager-service
+spring.cloud.gateway.routes[0].uri=lb://waste-manager-service
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/wastemanager/**
 
 #Log
 logging.level.root=info
