--- a/config-data/api_gateway-prod.properties
+++ b/config-data/api_gateway-prod.properties
@@ -7,10 +7,10 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 
 
 # Waste service route
-spring.cloud.gateway.mvc.routes[0].id=waste-manager-service
-spring.cloud.gateway.mvc.routes[0].uri=lb://waste-manager-service
-spring.cloud.gateway.mvc.routes[0].predicates[0]=Path=/api/v1/wastemanager/**
-
+spring.cloud.gateway.routes[0].id=waste-manager-service
+spring.cloud.gateway.routes[0].uri=lb://waste-manager-service
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/wastemanager/**
+spring.cloud.gateway.routes[0].filters=[AuthenticationFilter]
 #Log
 logging.level.root=info
 logging.level.org.springframework.cloud.gateway=trace
