refactor: add folder deploy using docker container

--- a/config-data/api_gateway-dev.properties
+++ b/config-data/api_gateway-dev.properties
@@ -10,7 +10,7 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 spring.cloud.gateway.routes[0].id=waste-manager-service
 spring.cloud.gateway.routes[0].uri=lb://waste-manager-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/wastemanager/**
-
+spring.cloud.gateway.routes[0].filters[0].name=AuthenticationFilter
 #Log
 logging.level.root=info
 logging.level.org.springframework.cloud.gateway=trace
