--- a/cloud-config/src/main/resources/application.properties
+++ b/cloud-config/src/main/resources/application.properties
@@ -1,7 +1,3 @@
-spring.application.name=cloud-config
-server.port=6060
-spring.profiles.active=dev
-spring.cloud.config.server.git.uri=https://github.com/leynerp/wasteconfig-microservice.git
-spring.cloud.config.server.git.search-paths=config-data
-spring.cloud.config.server.git.default-label=master
+spring.profiles.active=@profileActive@
+
 
