--- a/config-data/api_gateway-prod.properties
+++ b/config-data/api_gateway-prod.properties
@@ -1,7 +1,7 @@
 spring.application.name=api-gateway-service
 server.port=9090
 #Eureka client
-eureka.client.service-url.default-zone=http://eureka:8761/eureka
+eureka.client.service-url.default-zone=http://c-eureka:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 
