--- a/discovery-service/src/main/resources/application.properties
+++ b/discovery-service/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.application.name=eureka_service
-spring.profiles.active=dev
-spring.config.import=optional:configserver:http://localhost:6060/
+spring.profiles.active=@profileActive@
+
 
 
 
