--- a/waste-microservice/src/main/resources/application.properties
+++ b/waste-microservice/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.application.name=waste_manager
-spring.profiles.active=dev
-spring.config.import=optional:configserver:http://localhost:6060/
+spring.profiles.active=@profileActive@
+
 
 
 
