--- a/cloud-config/pom.xml
+++ b/cloud-config/pom.xml
@@ -38,6 +38,19 @@
 				<build.profile.id>dev</build.profile.id>
 				<profileActive>dev</profileActive>
 			</properties>
+			<build>
+				<resources>
+					<resource>
+						<directory>
+							src/main/resources
+						</directory>
+						<filtering>true</filtering>
+						<excludes>
+							<exclude>application-prod.properties</exclude>
+						</excludes>
+					</resource>
+				</resources>
+			</build>
 		</profile>
 		<profile>
 			<id>prod</id>
@@ -48,6 +61,19 @@
 				<build.profile.id>prod</build.profile.id>
 				<profileActive>prod</profileActive>
 			</properties>
+			<build>
+				<resources>
+					<resource>
+						<directory>
+							src/main/resources
+						</directory>
+						<filtering>true</filtering>
+						<excludes>
+							<exclude>application-dev.properties</exclude>
+						</excludes>
+					</resource>
+				</resources>
+			</build>
 		</profile>
 	</profiles>
 	<build>
