--- a/config-data/eureka_service-prod.properties
+++ b/config-data/eureka_service-prod.properties
@@ -1,6 +1,6 @@
 spring.application.name=discovery-service
 server.port=8761
-eureka.instance.hostname=localhost
+eureka.instance.hostname=c-eureka
 eureka.instance.prefer-ip-address=false
 
 eureka.client.register-with-eureka=false
