--- a/config-data/waste_manager-dev.properties
+++ b/config-data/waste_manager-dev.properties
@@ -16,7 +16,7 @@ spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
 
 #Eureka client
-eureka.client.service-url.default-zone=http://localhost1:8761/eureka
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 
